google logo changed, bootstrap align fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -463,7 +463,7 @@ footer .subscribe button {
 
   .service-btn {
     
-    height: 32px;
+    height: 41px;
    
   }
 
